infra.ci.jenkins.io.tf
###################################################################################
# Ressources for infra.ci.jenkins.io in the CDF subscription
###################################################################################
# Required to allow azcopy sync of contributors.jenkins.io File Share
module "infraci_contributorsjenkinsio_fileshare_serviceprincipal_writer" {
  source                     = "./modules/azure-jenkinsinfra-fileshare-serviceprincipal-writer"
  service_fqdn               = "infra-ci-jenkins-io-fileshare_serviceprincipal_writer"
  active_directory_owners    = [data.azuread_service_principal.terraform_production.object_id]
  active_directory_url       = "https://github.com/jenkins-infra/azure"
  service_principal_end_date = local.end_dates.infra_ci_jenkins_io.infraci_contributorsjenkinsio_fileshare_serviceprincipal_writer.end_date
  file_share_id              = azurerm_storage_share.contributors_jenkins_io.id
  storage_account_id         = azurerm_storage_account.contributors_jenkins_io.id
  default_tags               = local.default_tags
}
# Required to allow azcopy sync of docs.jenkins.io File Share
module "infraci_docsjenkinsio_fileshare_serviceprincipal_writer" {
  source                     = "./modules/azure-jenkinsinfra-fileshare-serviceprincipal-writer"
  service_fqdn               = "infra-ci-jenkins-io-fileshare_serviceprincipal_writer"
  active_directory_owners    = [data.azuread_service_principal.terraform_production.object_id]
  active_directory_url       = "https://github.com/jenkins-infra/azure"
  service_principal_end_date = local.end_dates.infra_ci_jenkins_io.infraci_docsjenkinsio_fileshare_serviceprincipal_writer.end_date
  file_share_id              = azurerm_storage_share.docs_jenkins_io.id
  storage_account_id         = azurerm_storage_account.docs_jenkins_io.id
  default_tags               = local.default_tags
}
# Required to allow azcopy sync of stats.jenkins.io File Share
module "infraci_statsjenkinsio_fileshare_serviceprincipal_writer" {
  source                     = "./modules/azure-jenkinsinfra-fileshare-serviceprincipal-writer"
  service_fqdn               = "infra-ci-jenkins-io-fileshare_serviceprincipal_writer"
  active_directory_owners    = [data.azuread_service_principal.terraform_production.object_id]
  active_directory_url       = "https://github.com/jenkins-infra/azure"
  service_principal_end_date = local.end_dates.infra_ci_jenkins_io.infraci_statsjenkinsio_fileshare_serviceprincipal_writer.end_date
  file_share_id              = azurerm_storage_share.stats_jenkins_io.id
  storage_account_id         = azurerm_storage_account.stats_jenkins_io.id
  default_tags               = local.default_tags
}
# Required to allow azcopy sync to the reports.jenkins.io File Share
module "infraci_reportsjenkinsio_fileshare_serviceprincipal_writer" {
  source                     = "./modules/azure-jenkinsinfra-fileshare-serviceprincipal-writer"
  service_fqdn               = "infraci-reportsjenkinsio-fileshare_serviceprincipal_writer"
  active_directory_owners    = [data.azuread_service_principal.terraform_production.object_id]
  active_directory_url       = "https://github.com/jenkins-infra/azure"
  service_principal_end_date = local.end_dates.infra_ci_jenkins_io.infraci_reportsjenkinsio_fileshare_serviceprincipal_writer.end_date
  file_share_id              = azurerm_storage_share.reports_jenkins_io.id
  storage_account_id         = azurerm_storage_account.reports_jenkins_io.id
  default_tags               = local.default_tags
}
# Required to allow azcopy sync of plugins.jenkins.io File Share
module "infraci_pluginsjenkinsio_fileshare_serviceprincipal_writer" {
  source                     = "./modules/azure-jenkinsinfra-fileshare-serviceprincipal-writer"
  service_fqdn               = "infraci-pluginsjenkinsio-fileshare_serviceprincipal_writer"
  active_directory_owners    = [data.azuread_service_principal.terraform_production.object_id]
  active_directory_url       = "https://github.com/jenkins-infra/azure"
  service_principal_end_date = local.end_dates.infra_ci_jenkins_io.infraci_pluginsjenkinsio_fileshare_serviceprincipal_writer.end_date
  file_share_id              = azurerm_storage_share.plugins_jenkins_io.id
  storage_account_id         = azurerm_storage_account.plugins_jenkins_io.id
  default_tags               = local.default_tags
}
# Required to allow infra.ci.jenkins.io to update the GeoIP DB
module "infraci_cronjobs_geoipdb_fileshare_serviceprincipal_writer" {
  source                  = "./modules/azure-jenkinsinfra-fileshare-serviceprincipal-writer"
  service_fqdn            = "infraci-cronjobs-geoipdb-fileshare_serviceprincipal_writer"
  active_directory_owners = [data.azuread_service_principal.terraform_production.object_id]
  active_directory_url    = "https://github.com/jenkins-infra/azure"
  # TODO: track with updatecli
  service_principal_end_date = "2027-01-07T00:00:00Z"
  file_share_id              = azurerm_storage_share.geoipdb_jenkins_io.id
  storage_account_id         = azurerm_storage_account.geoipdb_jenkins_io.id
  default_tags               = local.default_tags
}
# Resources for updatecli jobs in infra.ci.jenkins.io
resource "azurerm_resource_group" "updatecli_infra_ci_jenkins_io" {
  name     = "updatecli-infra-ci-jenkins-io"
  location = var.location
}
resource "azuread_application" "updatecli_infra_ci_jenkins_io" {
  display_name = "updatecli_infra.ci.jenkins.io"
  owners = [
    data.azuread_service_principal.terraform_production.object_id, # terraform-production Service Principal, used by the CI system
  ]
  tags = [for key, value in local.default_tags : "${key}:${value}"]
  required_resource_access {
    resource_app_id = "00000003-0000-0000-c000-000000000000" # Microsoft Graph

    resource_access {
      id   = "e1fe6dd8-ba31-4d61-89e7-88639da4683d" # User.Read
      type = "Scope"
    }
  }
  web {
    homepage_url = "https://infra.ci.jenkins.io/job/updatecli/"
  }
}
resource "azuread_service_principal" "updatecli_infra_ci_jenkins_io" {
  client_id                    = azuread_application.updatecli_infra_ci_jenkins_io.client_id
  app_role_assignment_required = false
  owners = [
    # Commenting out to migrate to new AzureAD provider
    # data.azuread_service_principal.terraform_production.id,
    "b847a030-25e1-4791-ad04-9e8484d87bce",
  ]
}
resource "azuread_application_password" "updatecli_infra_ci_jenkins_io" {
  application_id = azuread_application.updatecli_infra_ci_jenkins_io.id
  display_name   = "updatecli_infra.ci.jenkins.io-tf-managed"
  end_date       = "2026-11-22T00:00:00Z"
}
resource "azurerm_role_definition" "vm_images_reader" {
  name  = "ReadVMImages"
  scope = azurerm_resource_group.updatecli_infra_ci_jenkins_io.id

  permissions {
    actions = ["Microsoft.Compute/images/read"]
  }
}
resource "azurerm_role_assignment" "updatecli_infra_ci_jenkins_io_allow_images_list" {
  scope              = azurerm_resource_group.updatecli_infra_ci_jenkins_io.id
  role_definition_id = azurerm_role_definition.vm_images_reader.role_definition_resource_id
  principal_id       = azuread_service_principal.updatecli_infra_ci_jenkins_io.object_id
}
###################################################################################
# Ressources for infra.ci.jenkins.io in the sponsored subscription
###################################################################################
# Resources for the controller (e.g. moving the controller implies moving these)
resource "azurerm_resource_group" "infra_ci_jenkins_io_controller_sponsored" {
  provider = azurerm.jenkins-sponsored

  name     = "infra-ci-jenkins-io-controller-sponsored"
  location = var.location
  tags     = local.default_tags
}
resource "azurerm_managed_disk" "infra_ci_jenkins_io_data_sponsored" {
  provider = azurerm.jenkins-sponsored

  name                 = "infra-ci-jenkins-io-data-sponsored"
  location             = azurerm_resource_group.infra_ci_jenkins_io_controller_sponsored.location
  resource_group_name  = azurerm_resource_group.infra_ci_jenkins_io_controller_sponsored.name
  storage_account_type = "StandardSSD_ZRS"
  create_option        = "Empty"
  disk_size_gb         = 64
  tags                 = local.default_tags
}
# Required to allow AKS CSI driver to access the Azure disk
resource "azurerm_role_definition" "infra_ci_jenkins_io_controller_disk_reader_sponsored" {
  provider = azurerm.jenkins-sponsored

  name  = "ReadInfraCIDiskSponsored"
  scope = azurerm_resource_group.infra_ci_jenkins_io_controller_sponsored.id

  permissions {
    actions = [
      "Microsoft.Compute/disks/read",
      "Microsoft.Compute/disks/write",
    ]
  }
}
resource "azurerm_role_assignment" "infra_ci_jenkins_io_controller_disk_reader_sponsored" {
  provider = azurerm.jenkins-sponsored

  scope              = azurerm_resource_group.infra_ci_jenkins_io_controller_sponsored.id
  role_definition_id = azurerm_role_definition.infra_ci_jenkins_io_controller_disk_reader_sponsored.role_definition_resource_id
  principal_id       = azurerm_kubernetes_cluster.privatek8s_sponsored.identity[0].principal_id
}
# Allow to setup Azure permissions for the controller
resource "azurerm_user_assigned_identity" "infra_ci_jenkins_io_controller_sponsored" {
  provider = azurerm.jenkins-sponsored

  location            = azurerm_resource_group.infra_ci_jenkins_io_controller_sponsored.location
  name                = "infracijenkinsiocontrollersponsored"
  resource_group_name = azurerm_resource_group.infra_ci_jenkins_io_controller_sponsored.name
}
# Azure VM agents requires controller to read the resource group where VM images are stored
resource "azurerm_role_assignment" "infra_ci_jenkins_io_sponsored_allow_packer_sponsored" {
  provider = azurerm.jenkins-sponsored

  scope                = azurerm_resource_group.packer_images_sponsored["prod"].id
  role_definition_name = "Reader"
  principal_id         = azurerm_user_assigned_identity.infra_ci_jenkins_io_controller_sponsored.principal_id
}

# Resources used by both controller and agents indifferently
resource "azurerm_resource_group" "infra_ci_jenkins_io_sponsored_commons" {
  provider = azurerm.jenkins-sponsored

  name     = "infra-ci-jenkins-io-sponsored-commons"
  location = var.location
  tags     = local.default_tags
}
## Identity assigned to agents workloads (allowing them to reach resources without any Azure credential)
resource "azurerm_user_assigned_identity" "infra_ci_jenkins_io_agents_jenkins_sponsored" {
  provider = azurerm.jenkins-sponsored

  location            = var.location
  name                = "infra-ci-jenkins-io-sponsored-agents"
  resource_group_name = azurerm_resource_group.infra_ci_jenkins_io_sponsored_commons.name
}
# The Controller identity must be able to operate this identity to assign it to VM agents - https://plugins.jenkins.io/azure-vm-agents/#plugin-content-roles-required-by-feature
resource "azurerm_role_assignment" "infra_ci_jenkins_io_sponsored_operate_agents_identity_sponsored" {
  provider = azurerm.jenkins-sponsored

  scope                = azurerm_user_assigned_identity.infra_ci_jenkins_io_agents_jenkins_sponsored.id
  role_definition_name = "Managed Identity Operator"
  principal_id         = azurerm_user_assigned_identity.infra_ci_jenkins_io_controller_sponsored.principal_id
}
resource "azurerm_role_assignment" "infra_ci_jenkins_io_agents_jenkins_sponsored_write_buildsreports_share" {
  provider = azurerm.jenkins-sponsored

  scope = azurerm_storage_account.builds_reports_jenkins_io.id
  # Allow writing
  role_definition_name = "Storage File Data Privileged Contributor"
  principal_id         = azurerm_user_assigned_identity.infra_ci_jenkins_io_agents_jenkins_sponsored.principal_id
}

# Required to allow controller to check for subnets inside the virtual network
resource "azurerm_role_definition" "infra_ci_jenkins_io_controller_vnet_sponsored_reader" {
  provider = azurerm.jenkins-sponsored

  name  = "read-infra-ci-jenkins-io-vnet-sponsored"
  scope = data.azurerm_virtual_network.infra_ci_jenkins_io_sponsored.id

  permissions {
    actions = ["Microsoft.Network/virtualNetworks/read"]
  }
}
resource "azurerm_role_assignment" "infra_ci_jenkins_io_controller_sponsored_vnet_sponsored_reader" {
  provider = azurerm.jenkins-sponsored

  scope              = data.azurerm_virtual_network.infra_ci_jenkins_io_sponsored.id
  role_definition_id = azurerm_role_definition.infra_ci_jenkins_io_controller_vnet_sponsored_reader.role_definition_resource_id
  principal_id       = azurerm_user_assigned_identity.infra_ci_jenkins_io_controller_sponsored.principal_id
}
module "infra_ci_jenkins_io_azurevm_agents_jenkins_sponsored" {
  source = "./modules/azure-jenkinsinfra-azurevm-agents"

  providers = {
    azurerm = azurerm.jenkins-sponsored
  }

  service_fqdn                     = local.infra_ci_jenkins_io_fqdn
  service_short_stripped_name      = local.infra_ci_jenkins_io_service_short_stripped_name
  ephemeral_agents_network_rg_name = data.azurerm_subnet.infra_ci_jenkins_io_sponsored_ephemeral_agents.resource_group_name
  ephemeral_agents_network_name    = data.azurerm_subnet.infra_ci_jenkins_io_sponsored_ephemeral_agents.virtual_network_name
  ephemeral_agents_subnet_name     = data.azurerm_subnet.infra_ci_jenkins_io_sponsored_ephemeral_agents.name
  nsg_rg_name                      = azurerm_resource_group.infra_ci_jenkins_io_sponsored_commons.name
  controller_ips = concat(
    data.azurerm_subnet.privatek8s_sponsored_infra_ci_jenkins_io_controller.address_prefixes, # Controller pod requests are using SNAT (changing internal outbound IPs) to reach the other subnet
  )
  controller_service_principal_ids = [
    azurerm_user_assigned_identity.infra_ci_jenkins_io_controller_sponsored.principal_id,
  ]
  storage_account_name = "infraciagentssponso" # Max 24 chars


  default_tags = local.default_tags

  jenkins_infra_ips = {
    privatevpn_subnet = data.azurerm_subnet.private_vnet_data_tier.address_prefixes
  }
}
# Allow infra.ci sponsored ephemeral agents to reach packer VMs with SSH on aws
resource "azurerm_network_security_rule" "allow_outbound_ssh_from_infraci_agents_jenkins_sponsored_to_aws_packer" {
  provider               = azurerm.jenkins-sponsored
  name                   = "allow-outbound-ssh-from-infraci-agents-jenkins-sponsored-to-aws-packer"
  priority               = 4079
  direction              = "Outbound"
  access                 = "Allow"
  protocol               = "Tcp"
  source_port_range      = "*"
  destination_port_range = "22"
  source_address_prefixes = [
    data.azurerm_subnet.infra_ci_jenkins_io_sponsored_ephemeral_agents.address_prefix
  ]
  # Allow all destinations as we cannot know the AWS EC2 public IPs of instance in advance
  destination_address_prefix  = "*"
  resource_group_name         = module.infra_ci_jenkins_io_azurevm_agents_jenkins_sponsored.ephemeral_agents_nsg_rg_name
  network_security_group_name = module.infra_ci_jenkins_io_azurevm_agents_jenkins_sponsored.ephemeral_agents_nsg_name
}

# Allow infra.ci sponsored ephemeral agents to reach packer VMs with SSH on azure
resource "azurerm_network_security_rule" "allow_outbound_ssh_from_infraci_agents_jenkins_sponsored_to_packer_vms" {
  provider               = azurerm.jenkins-sponsored
  name                   = "allow-outbound-ssh-from-infraci-agents-jenkins-sponsored-to-packer-vms"
  priority               = 4080
  direction              = "Outbound"
  access                 = "Allow"
  protocol               = "Tcp"
  source_port_range      = "*"
  destination_port_range = "22"
  source_address_prefixes = [
    data.azurerm_subnet.infra_ci_jenkins_io_sponsored_ephemeral_agents.address_prefix
  ]
  destination_address_prefix  = data.azurerm_subnet.infra_ci_jenkins_io_sponsored_packer_builds.address_prefix
  resource_group_name         = module.infra_ci_jenkins_io_azurevm_agents_jenkins_sponsored.ephemeral_agents_nsg_rg_name
  network_security_group_name = module.infra_ci_jenkins_io_azurevm_agents_jenkins_sponsored.ephemeral_agents_nsg_name
}

# Allow infra.ci sponsored ephemeral agents to reach packer VMs with WinRM (HTTP without TLS)
resource "azurerm_network_security_rule" "allow_outbound_winrm_http_from_infraci_agents_jenkins_sponsored_to_packer_vms" {
  provider               = azurerm.jenkins-sponsored
  name                   = "allow-outbound-winrm-http-from-infraci-agents-jenkins-sponsored-to-packer-vms"
  priority               = 4081
  direction              = "Outbound"
  access                 = "Allow"
  protocol               = "Tcp"
  source_port_range      = "*"
  destination_port_range = "5985"
  source_address_prefixes = [
    data.azurerm_subnet.infra_ci_jenkins_io_sponsored_ephemeral_agents.address_prefix
  ]
  # Allow all destinations as we cannot know the AWS EC2 public IPs of instance in advance
  destination_address_prefix  = "*"
  resource_group_name         = module.infra_ci_jenkins_io_azurevm_agents_jenkins_sponsored.ephemeral_agents_nsg_rg_name
  network_security_group_name = module.infra_ci_jenkins_io_azurevm_agents_jenkins_sponsored.ephemeral_agents_nsg_name
}

# Allow infra.ci sponsored ephemeral agents to reach packer VMs with WinRM (HTTPS)
resource "azurerm_network_security_rule" "allow_outbound_winrm_https_from_infraci_agents_jenkins_sponsored_to_packer_vms" {
  provider               = azurerm.jenkins-sponsored
  name                   = "allow-outbound-winrm-https-from-infraci-agents-jenkins-sponsored-to-packer-vms"
  priority               = 4082
  direction              = "Outbound"
  access                 = "Allow"
  protocol               = "Tcp"
  source_port_range      = "*"
  destination_port_range = "5986"
  source_address_prefixes = [
    data.azurerm_subnet.infra_ci_jenkins_io_sponsored_ephemeral_agents.address_prefix
  ]
  # Allow all destinations as we cannot know the AWS EC2 public IPs of instance in advance
  destination_address_prefix  = "*"
  resource_group_name         = module.infra_ci_jenkins_io_azurevm_agents_jenkins_sponsored.ephemeral_agents_nsg_rg_name
  network_security_group_name = module.infra_ci_jenkins_io_azurevm_agents_jenkins_sponsored.ephemeral_agents_nsg_name
}

# Allow infra.ci sponsored ephemeral agents to reach our AKS clusters private endpoints
resource "azurerm_network_security_rule" "allow_outbound_https_from_infraci_ephemeral_agents_sponsored_to_privatek8s_sponsored" {
  provider               = azurerm.jenkins-sponsored
  name                   = "allow-outbound-https-from-infraci-agents-sponsored-to-privatek8s-sponsored"
  priority               = 4084
  direction              = "Outbound"
  access                 = "Allow"
  protocol               = "Tcp"
  source_port_range      = "*"
  destination_port_range = "443"
  source_address_prefixes = [
    data.azurerm_subnet.infra_ci_jenkins_io_sponsored_ephemeral_agents.address_prefix
  ]
  # TODO: restrict to required resources only
  destination_address_prefixes = data.azurerm_subnet.privatek8s_sponsored_app.address_prefixes
  resource_group_name          = module.infra_ci_jenkins_io_azurevm_agents_jenkins_sponsored.ephemeral_agents_nsg_rg_name
  network_security_group_name  = module.infra_ci_jenkins_io_azurevm_agents_jenkins_sponsored.ephemeral_agents_nsg_name
}
resource "azurerm_network_security_rule" "allow_outbound_https_from_infraci_ephemeral_agents_sponsored_to_infraciagents1" {
  provider               = azurerm.jenkins-sponsored
  name                   = "allow-outbound-https-from-infraci-agents-sponsored-to-infraciagents1"
  priority               = 4085
  direction              = "Outbound"
  access                 = "Allow"
  protocol               = "Tcp"
  source_port_range      = "*"
  destination_port_range = "443"
  source_address_prefixes = [
    data.azurerm_subnet.infra_ci_jenkins_io_sponsored_ephemeral_agents.address_prefix
  ]
  # TODO: restrict to required resources only
  destination_address_prefixes = data.azurerm_subnet.infra_ci_jenkins_io_sponsored_kubernetes_agents.address_prefixes
  resource_group_name          = module.infra_ci_jenkins_io_azurevm_agents_jenkins_sponsored.ephemeral_agents_nsg_rg_name
  network_security_group_name  = module.infra_ci_jenkins_io_azurevm_agents_jenkins_sponsored.ephemeral_agents_nsg_name
}
resource "azurerm_network_security_rule" "allow_outbound_https_from_infraci_ephemeral_agents_jenkins_sponsored_to_publick8s" {
  provider               = azurerm.jenkins-sponsored
  name                   = "allow-outbound-https-from-infraci-agents-jenkins-sponsored-to-publick8s"
  priority               = 4086
  direction              = "Outbound"
  access                 = "Allow"
  protocol               = "Tcp"
  source_port_range      = "*"
  destination_port_range = "443"
  source_address_prefixes = [
    data.azurerm_subnet.infra_ci_jenkins_io_sponsored_ephemeral_agents.address_prefix
  ]
  # TODO: restrict to required resources only
  # publick8s is a dual-stack cluster, filtering on IPv4 only
  destination_address_prefixes = [
    for ip in data.azurerm_subnet.publick8s.address_prefixes : ip if can(cidrnetmask(ip))
  ]
  resource_group_name         = module.infra_ci_jenkins_io_azurevm_agents_jenkins_sponsored.ephemeral_agents_nsg_rg_name
  network_security_group_name = module.infra_ci_jenkins_io_azurevm_agents_jenkins_sponsored.ephemeral_agents_nsg_name
}

# Allow infra.ci sponsored ephemeral agents to reach postgres-public-db hosted on Azure
resource "azurerm_network_security_rule" "allow_outbound_postgres_from_infraci_ephemeral_agents_jenkins_sponsored_to_postgres_public_db" {
  provider               = azurerm.jenkins-sponsored
  name                   = "allow-outbound-postgres-from-infraci-agents-sponsored-to-postgres-public-db"
  priority               = 4088
  direction              = "Outbound"
  access                 = "Allow"
  protocol               = "Tcp"
  source_port_range      = "*"
  destination_port_range = "5432"
  source_address_prefixes = [
    data.azurerm_subnet.infra_ci_jenkins_io_sponsored_ephemeral_agents.address_prefix
  ]
  destination_address_prefixes = [data.azurerm_subnet.public_db_vnet_postgres_tier.address_prefix]
  resource_group_name          = module.infra_ci_jenkins_io_azurevm_agents_jenkins_sponsored.ephemeral_agents_nsg_rg_name
  network_security_group_name  = module.infra_ci_jenkins_io_azurevm_agents_jenkins_sponsored.ephemeral_agents_nsg_name
}

# Allow access to the private Azure Container Registry through an Azure Endpoint NIC
module "infracijenkinsio_sponsored_acr_pe" {
  source = "./modules/azure-container-registry-private-links"

  providers = {
    azurerm     = azurerm.jenkins-sponsored
    azurerm.acr = azurerm
  }

  name = "infracijenkinsiosponso"

  acr_name     = azurerm_container_registry.dockerhub_mirror.name
  acr_location = azurerm_container_registry.dockerhub_mirror.location
  acr_rg_name  = azurerm_container_registry.dockerhub_mirror.resource_group_name

  subnet_name  = data.azurerm_subnet.infra_ci_jenkins_io_sponsored_commons.name
  vnet_name    = data.azurerm_virtual_network.infra_ci_jenkins_io_sponsored.name
  vnet_rg_name = data.azurerm_virtual_network.infra_ci_jenkins_io_sponsored.resource_group_name

  default_tags = local.default_tags
}

## Allow access to/from ACR endpoint
resource "azurerm_network_security_rule" "allow_out_https_from_infra_ephemeral_agents_jenkins_sponsored_to_acr" {
  provider               = azurerm.jenkins-sponsored
  count                  = var.environment == "staging" ? 0 : 1
  name                   = "allow-out-https-from-ephemeral-agents-jenkins-sponsored-to-acr"
  priority               = 4050
  direction              = "Outbound"
  access                 = "Allow"
  protocol               = "Tcp"
  source_port_range      = "*"
  destination_port_range = "443"
  source_address_prefixes = [
    data.azurerm_subnet.infra_ci_jenkins_io_sponsored_ephemeral_agents.address_prefix
  ]
  destination_address_prefixes = split(",", module.infracijenkinsio_sponsored_acr_pe.private_endpoint_nic_ip_addresses)
  resource_group_name          = module.infra_ci_jenkins_io_azurevm_agents_jenkins_sponsored.ephemeral_agents_nsg_rg_name
  network_security_group_name  = module.infra_ci_jenkins_io_azurevm_agents_jenkins_sponsored.ephemeral_agents_nsg_name
}
resource "azurerm_network_security_rule" "allow_in_https_from_infra_ephemeral_agents_jenkins_sponsored_to_acr" {
  provider               = azurerm.jenkins-sponsored
  count                  = var.environment == "staging" ? 0 : 1
  name                   = "allow-in-https-from-ephemeral-agents-jenkins-sponsored-to-acr"
  priority               = 4050
  direction              = "Inbound"
  access                 = "Allow"
  protocol               = "Tcp"
  source_port_range      = "*"
  destination_port_range = "443"
  source_address_prefixes = [
    data.azurerm_subnet.infra_ci_jenkins_io_sponsored_ephemeral_agents.address_prefix
  ]
  destination_address_prefixes = split(",", module.infracijenkinsio_sponsored_acr_pe.private_endpoint_nic_ip_addresses)
  resource_group_name          = module.infra_ci_jenkins_io_azurevm_agents_jenkins_sponsored.ephemeral_agents_nsg_rg_name
  network_security_group_name  = module.infra_ci_jenkins_io_azurevm_agents_jenkins_sponsored.ephemeral_agents_nsg_name
}
#### Allow provided Principal IDs to push images to the registry
moved {
  from = azurerm_role_assignment.push_to_acr
  to   = azurerm_role_assignment.infra_ci_jenkins_io_push_to_acr
}
resource "azurerm_role_assignment" "infra_ci_jenkins_io_push_to_acr" {
  count                            = var.environment == "staging" ? 0 : 1
  principal_id                     = azurerm_user_assigned_identity.infra_ci_jenkins_io_agents_jenkins_sponsored.principal_id
  role_definition_name             = "AcrPush"
  scope                            = azurerm_container_registry.dockerhub_mirror.id
  skip_service_principal_aad_check = true
}

## Vault
resource "azurerm_key_vault" "infra_ci_jenkins_io_vault" {
  tenant_id           = data.azurerm_client_config.current.tenant_id
  name                = "prodjenkinsinfra"
  location            = "East US"
  resource_group_name = "prodjenkinsinfra"
  sku_name            = "premium"

  enabled_for_disk_encryption     = true
  soft_delete_retention_days      = 90
  purge_protection_enabled        = false
  rbac_authorization_enabled      = false
  enabled_for_deployment          = false
  enabled_for_template_deployment = false
  # Adding a network rule with `public_network_access_enabled` set to `true` (default) selects the option "Enabled from selected virtual networks and IP addresses"
  public_network_access_enabled = true
  # Adding a network rule with `public_network_access_enabled` set to `true` (default) selects the option "Enabled from selected virtual networks and IP addresses"
  network_acls {
    bypass                     = "AzureServices"
    default_action             = "Deny"
    virtual_network_subnet_ids = local.app_subnets["infra.ci.jenkins.io"].agents
  }

  # smerle
  access_policy {
    tenant_id = data.azurerm_client_config.current.tenant_id
    object_id = "0a9ca009-8333-4351-9a8a-b02244ff72b1"

    key_permissions = [
      "Encrypt",
      "Decrypt",
    ]
  }

  # dduportal
  access_policy {
    tenant_id = data.azurerm_client_config.current.tenant_id
    object_id = "8bb006a6-3d5f-45e0-be59-91af3db79da3"

    key_permissions = [
      "Decrypt",
      "Encrypt",
    ]
  }

  # tim jacomb
  access_policy {
    tenant_id = data.azurerm_client_config.current.tenant_id
    object_id = "62ea8f6b-2604-46a6-b1cf-d2aaa15ba0c6"

    key_permissions = [
      "Decrypt",
      "Encrypt",
    ]
  }

  # jenkinsinfraSOPS
  access_policy {
    tenant_id = data.azurerm_client_config.current.tenant_id
    object_id = "cfcd6abd-898d-417b-8474-fc1d93705cce"

    key_permissions = [
      "Get",
      "List",
      "Purge",
      "Decrypt",
      "Encrypt",
      "Verify",
      "Sign",
    ]
  }
}
